--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ dependencies:
   fluttertoast: ^8.0.8
   flutter_riverpod: ^1.0.3
   introduction_screen: ^3.0.2
-  video_player: ^2.4.5
-  chewie: ^1.3.4
+  url_launcher: ^6.0.2
+
 
 dev_dependencies:
   flutter_test:
